# permafrust

./: .env  .gitignore  Cargo.toml  README.md  package.json  rollup.config.js  sqlx-data.json
migrations/: 20210201000001_create_root_directories.sql  20210201000002_create_directories.sql  20210201000003_create_archives.sql
public/: index.html
src/: App.svelte  Explorer.svelte  api.ts  borg.rs  cli.rs  database.rs  df.rs  du.rs  main.rs  model.rs  permafrust.rs  web.rs
