[package]
name = "permafrust"
version = "0.1.0"
authors = ["Maxime Gauduin <alucryd@archlinux.org>"]
license = "GPL-3.0+"
description = "Cold and Rusty Storage"
edition = "2018"
readme = "README.md"
exclude = ["test/"]

[dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
chrono = { version = "0.4.19", features = ["serde"] }
clap = "2.33.3"
dotenv = "0.15.0"
env_logger = "0.8.4"
lazy_static = "1.4.0"
log = "0.4.14"
rayon = "1.5.1"
regex = "1.5.4"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
sqlx = { version = "0.5.5", features = ["chrono", "migrate", "offline", "postgres", "runtime-async-std-native-tls", "uuid"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
walkdir = "2.3.2"

[[bin]]
name = "permafrust"
path = "src/main.rs"
